docs/sf-export/sfdx-raw/objects/Five9_API__c/Five9_API__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Five9 API Url, Username and Password</label>
</CustomObject>