docs/sf-export/sfdx-raw/objects/Five9_API__c/fields/API_URL__c.field-meta.xml
<CustomField>
    <fullName>API_URL__c</fullName>
    <label>API URL</label>
    <length>120</length>
    <type>Text</type>
</CustomField>