docs/sf-export/sfdx-raw/objects/Five9_API__c/fields/Api_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Api_User_Name__c</fullName>
    <label>Api User Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>